# magikrun

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  code-quality.yml  formatting.yml  integration-tests.yml  release.yml  security-audit.yml  unit-tests.yml
src/: bundle.rs  constants.rs  error.rs  image.rs  infra.rs  infracontainer.rs  lib.rs  passt.rs  platform.rs  registry.rs  runtime.rs  storage.rs
src/infra/: extension.rs  mod.rs
src/pod/: mod.rs  portforward.rs  spec.rs  state.rs  traits.rs
src/pod/runtimes/: microvm.rs  mod.rs  native.rs  wasm.rs
src/pod/tsi/: client.rs  mod.rs  protocol.rs
src/runtimes/: krun.rs  mod.rs  native.rs  wasmtime.rs  windows.rs  youki.rs
tests/: bundle_tests.rs  constants_tests.rs  error_tests.rs  image_tests.rs  platform_tests.rs  pod_tests.rs  registry_tests.rs  runtime_tests.rs  runtimes_tests.rs  storage_tests.rs  windows_tests.rs
