[package]
name = "magikrun"
version = "0.3.5"
edition = "2024"
description = "Unified OCI runtime for containers, WebAssembly, and microVMs"
license = "Apache-2.0"
repository = "https://github.com/magikrun/magikrun"
keywords = ["oci", "containers", "runtime", "pod"]
categories = ["virtualization"]

[[bin]]
name = "magikrun"
path = "src/bin/magikrun.rs"

# vminit is Linux-only (runs as PID 1 inside MicroVMs)
[[bin]]
name = "vminit"
path = "src/bin/vminit.rs"
required-features = ["vminit"]

[features]
default = []
# Exposes internal APIs for testing security properties (layer extraction, etc.)
# SECURITY: Only enable in test builds, not production
testing = []
# vminit binary - Linux only, requires additional deps
vminit = []

[dependencies]
# Core
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# OCI
oci-spec = "0.8"
oci-distribution = "0.11"

# Manifest parsing (K8s Pod YAML)
serde_yaml = "0.9"

# Executors - wasmtime is cross-platform
# SECURITY: >=38.0.4 required for RUSTSEC-2025-0118, RUSTSEC-2025-0046
wasmtime = "40"
wasmtime-wasi = "40"

# Bundle/Image handling
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"

# Utilities
dirs = "6"
uuid = { version = "1", features = ["v7", "serde"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Youki libcontainer for native OCI container runtime (Linux only)
# SECURITY: >=0.5 required for RUSTSEC-2024-0437 (protobuf fix)
[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = { version = "0.5", default-features = false, features = ["v2"] }
libcgroups = { version = "0.5", default-features = false, features = ["v2"] }
# vminit dependencies (Linux only)
anyhow = "1"
tokio = { version = "1", features = ["signal"] }

# libkrun for microVM isolation (Linux and macOS only)
[target.'cfg(unix)'.dependencies]
krun-sys = "1.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
